--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
 <script>
 /** 1) วางลิงก์ GViz JSON ของชีทที่นี่ */
-const GVIZ_URL = "https://docs.google.com/spreadsheets/d/1C4roXeCrWmFI_xPGoGLdanQlJueINxaoUvfEs4uX_OA/gviz/tq?tqx=out:json&sheet=companions";
+const GVIZ_URL = "https://docs.google.com/spreadsheets/d/1C4roXeCrWmFI_xPGoGLdanQlJueINxaoUvfEs4uX_OA/edit?usp=sharing
+";
 
 /** 2) State */
 const KEY_PREFIX = "vtomo_reveal_v1_"; // บันทึกผลแยกต่อ species
@@ -232,3 +233,4 @@ function resetSpecies(species){
 </script>
 </body>
 </html>
+
