--- a/index.html
+++ b/index.html
@@ -23,27 +23,35 @@
      background:linear-gradient(135deg,#fff,var(--accent1));-webkit-background-clip:text;-webkit-text-fill-color:transparent}
   p.lead{opacity:.9;text-align:center;margin:14px auto 28px;max-width:700px}
   .row{display:flex;gap:14px;flex-wrap:wrap;justify-content:center;margin:18px 0}
-  
-  /* ▼ หรูขึ้น */
+
+  /* ▼▼▼ Dropdown หรูขึ้น (ปรับเฉพาะส่วนนี้) ▼▼▼ */
   .select{
     appearance:none;
-    background:linear-gradient(135deg, #1e293b, #312e81);
-    border:1px solid #ffffff44;
-    color:#FACC15;
-    border-radius:12px;
-    padding:12px 14px;
-    min-width:240px;
+    background:linear-gradient(180deg, #ffffff26, #ffffff14);
+    border:1px solid #ffffff3a;
+    color:#FAF9F6;
+    border-radius:14px;
+    padding:14px 42px 14px 16px;
+    min-width:260px;
     font-family:"Playfair Display", serif;
     font-size:16px;
     font-weight:600;
     text-align:center;
     cursor:pointer;
-    box-shadow:0 4px 12px rgba(0,0,0,0.3);
-    transition:.3s;
+    box-shadow:0 6px 24px rgba(250,249,246,.06), inset 0 1px 0 #ffffff3a;
+    transition:.25s; backdrop-filter: blur(6px);
+    background-image:
+      linear-gradient(180deg, #ffffff26, #ffffff14),
+      url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none' stroke='%23FACC15' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><polyline points='6 9 12 15 18 9'/></svg>");
+    background-repeat:no-repeat;
+    background-position:left top, right 12px center;
+    background-size:auto,18px;
   }
-  .select:hover{box-shadow:0 6px 20px rgba(250,204,21,0.3);}
+  .select:hover{ border-color:#FADCD9aa; box-shadow:0 10px 30px rgba(250,220,217,.15); }
+  .select:focus{ outline:0; border-color:#FACC15; box-shadow:0 0 0 3px #facc1533; }
   .select option{background:#0f172a;color:#fff;}
-  
+  /* ▲▲▲ จบส่วน Dropdown ▲▲▲ */
+
   .btn{border:0;padding:12px 22px;border-radius:999px;font-weight:700;cursor:pointer;transition:.25s}
   .btn-primary{background:linear-gradient(135deg,#F472B6,#FB923C);color:#fff;box-shadow:0 10px 30px rgba(244,114,182,.35)}
   .btn-primary:hover{transform:translateY(-2px);box-shadow:0 16px 40px rgba(244,114,182,.5)}
@@ -69,7 +77,7 @@
         background:linear-gradient(135deg,var(--gold),var(--accent1));
         -webkit-background-clip:text;-webkit-text-fill-color:transparent;margin-bottom:6px}
   .role{color:var(--accent2);margin-bottom:10px}
-  .personality{opacity:.95;font-style:italic;max-width:560px;margin:0 auto 8px}
+  .whisper{opacity:.95;font-style:italic;max-width:560px;margin:0 auto}
   .why{opacity:.9;font-size:15px;max-width:600px;margin:8px auto}
   .hint{opacity:.65;font-size:13px;text-align:center;margin-top:12px}
   .lock{opacity:.6;font-size:12px;margin-top:10px}
@@ -98,7 +106,7 @@
       <div class="img" id="imgBox">✨</div>
       <div class="name" id="name">—</div>
       <div class="role" id="role">—</div>
-      <div class="personality" id="personality">—</div>
+      <div class="whisper" id="whisper">—</div>
       <div class="why" id="why">—</div>
       <p class="lock" id="lockHint">This reveal is saved on your device for this species. <span class="reset" id="reset">Reset</span></p>
       <p class="hint">Tip: Switching species lets you perform a new ritual for that species.</p>
@@ -109,11 +117,15 @@
   </div>
 
 <script>
+/** 1) วางลิงก์ GViz JSON ของชีทที่นี่ (ชื่อแท็บต้องตรงกับใน URL: sheet=companions) */
 const GVIZ_URL = "https://docs.google.com/spreadsheets/d/1C4roXeCrWmFI_xPGoGLdanQlJueINxaoUvfEs4uX_OA/gviz/tq?tqx=out:json&sheet=companions";
-const KEY_PREFIX = "vtomo_reveal_v1_";
-let DB = {};
-let speciesList = [];
 
+/** 2) State */
+const KEY_PREFIX = "vtomo_reveal_v1_"; // บันทึกผลแยกต่อ species
+let DB = {};          // { species: [ {name, role, personality?, why?, image_url}, ... ] }
+let speciesList = []; // ["wolf","cat",...]
+
+/** 3) fetchSheet: อดทนต่อหัวตาราง/ชื่อคอลัมน์ และไม่บังคับ personality/why */
 async function fetchSheet(){
   const res = await fetch(GVIZ_URL, { cache: 'no-store' });
   const raw = await res.text();
@@ -123,36 +135,42 @@ async function fetchSheet(){
   const rows = (json.table.rows || []).map(r => (r.c || []).map(c => (c ? c.v : "")));
   const colLabels = (json.table.cols || []).map(c => (c.label || '').trim());
   const hasLabels = colLabels.some(l => l.length > 0);
+  const header  = hasLabels ? colLabels : (rows[0] || []).map(x => (x || '').toString().trim());
+  const dataRows= hasLabels ? rows : rows.slice(1);
 
-  let header = hasLabels ? colLabels : (rows[0] || []).map(x => (x || '').toString().trim());
-  let dataRows = hasLabels ? rows : rows.slice(1);
+  // ทำดัชนีแบบไม่สนตัวพิมพ์/ช่องว่างส่วนเกิน
+  const H = {};
+  header.forEach((h,i)=> H[(h||'').toString().trim().toLowerCase()] = i);
 
-  const idx = {};
-  header.forEach((h,i)=>{ idx[(h || '').toLowerCase()] = i; });
+  // ต้องมีขั้นต่ำ: species, name, role, image_url
+  const need = ['species','name','role','image_url'];
+  for (const k of need){ if (!(k in H)) throw new Error('Missing column: '+k); }
 
-  const required = ['species','name','role','personality','why','image_url'];
-  const missing = required.filter(k => !(k in idx));
-  if (missing.length) throw new Error('Missing columns: ' + missing.join(', '));
+  // personality (อาจไม่มี) → ใช้ personality หรือ whisper (เดิม)
+  const idxPersonality = ('personality' in H) ? H['personality'] : H['whisper'];
+  // why (อาจไม่มี) → รองรับหลายชื่อ
+  const idxWhy = H['why_he_chose_you'] ?? H['why'] ?? H['why_chose_you'];
 
   DB = {};
   dataRows.forEach(r=>{
-    const species = (r[idx['species']]||'').toString().trim().toLowerCase();
+    const species = ((r[H['species']]||'')+'').trim().toLowerCase();
     if (!species) return;
     const item = {
       species,
-      name: (r[idx['name']]||'').toString().trim(),
-      role: (r[idx['role']]||'').toString().trim(),
-      personality: (r[idx['personality']]||'').toString().trim(),
-      why: (r[idx['why']]||'').toString().trim(),
-      image_url: (r[idx['image_url']]||'').toString().trim()
+      name: ((r[H['name']]||'')+'').trim(),
+      role: ((r[H['role']]||'')+'').trim(),
+      image_url: ((r[H['image_url']]||'')+'').trim()
     };
-    if (!DB[species]) DB[species] = [];
-    DB[species].push(item);
+    if (idxPersonality !== undefined) item.personality = ((r[idxPersonality]||'')+'').trim();
+    if (idxWhy !== undefined)         item.why         = ((r[idxWhy]||'')+'').trim();
+
+    (DB[species] ||= []).push(item);
   });
 
   speciesList = Object.keys(DB).sort();
 }
 
+/** 4) สร้าง dropdown จาก DB */
 function populateSpecies(){
   const sel = document.getElementById('species');
   sel.innerHTML = "";
@@ -163,32 +181,49 @@ function populateSpecies(){
   });
   sel.disabled = false;
   document.getElementById('begin').disabled = false;
+
+  // รองรับ ?species=wolf
   const sp = new URLSearchParams(location.search).get('species');
   if (sp && DB[sp]) sel.value = sp;
 }
 
+/** 5) เลือกครั้งเดียวต่อ species */
 function pickOnceFor(species){
   const key = KEY_PREFIX + species;
   const saved = localStorage.getItem(key);
   if (saved) return JSON.parse(saved);
 
   const pool = DB[species] || [];
+  if (!pool.length) throw new Error("No data for species: "+species);
+
   const idx = Math.floor(Math.random()*pool.length);
   const chosen = {...pool[idx], _idx: idx, _ts: Date.now()};
   localStorage.setItem(key, JSON.stringify(chosen));
   return chosen;
 }
 
+/** 6) render: แสดง personality/why เฉพาะเมื่อมีค่า (whisper element = Personality) */
 function render(c){
-  document.getElementById('imgBox').innerHTML = c.image_url ? `<img src="${c.image_url}" alt="${c.name}">` : "✨";
+  const imgBox = document.getElementById('imgBox');
+  imgBox.innerHTML = c.image_url ? `<img src="${c.image_url}" alt="${c.name}">` : "✨";
   document.getElementById('name').textContent = c.name || "—";
   document.getElementById('role').textContent = c.role || "—";
-  document.getElementById('personality').textContent = c.personality ? `Personality: ${c.personality}` : "—";
-  document.getElementById('why').textContent = c.why ? `Why He Chose You: ${c.why}` : "—";
+
+  const whisperEl = document.getElementById('whisper');
+  const personalityText = c.personality || '';
+  whisperEl.textContent = personalityText ? `Personality: ${personalityText}` : "—";
+
+  const whyEl = document.getElementById('why');
+  if (whyEl){
+    whyEl.textContent = c.why ? `Why He Chose You: ${c.why}` : "—";
+  }
+
   document.getElementById('result').classList.add('show');
+  document.getElementById('result').scrollIntoView({behavior:'smooth',block:'center'});
   document.getElementById('msg').textContent = "";
 }
 
+/** 7) เอฟเฟกต์ + reset */
 function pulse(){
   const circle = document.getElementById('circle');
   circle.style.boxShadow = "0 0 120px rgba(244,114,182,.75)";
@@ -199,28 +234,39 @@ function resetSpecies(species){
   location.reload();
 }
 
+/** 8) main */
 (async function init(){
   try{
     await fetchSheet();
     if(!speciesList.length) {
-      document.getElementById('msg').textContent = "No data found. Check your Google Sheet.";
+      document.getElementById('msg').textContent = "No data found. Check your Google Sheet (headers & sharing).";
       return;
     }
     populateSpecies();
+
+    // ถ้าเคยสุ่มไว้แล้วใน species ปัจจุบัน ให้โชว์ทันที
     const sp = document.getElementById('species').value;
     const saved = localStorage.getItem(KEY_PREFIX + sp);
     if (saved) render(JSON.parse(saved));
   }catch(e){
-    document.getElementById('msg').textContent = "Loading error.";
+    document.getElementById('msg').textContent = "Loading error. Please try again later.";
     console.error(e);
   }
+
+  document.getElementById('begin').addEventListener('click',()=>{
+    document.getElementById('stage').scrollIntoView({behavior:'smooth'});
+  });
 
   document.getElementById('circle').addEventListener('click', ()=>{
     const sp = document.getElementById('species').value;
     if(!sp){ alert("Please select a species first."); return; }
     pulse();
     const saved = localStorage.getItem(KEY_PREFIX + sp);
-    if (saved){ render(JSON.parse(saved)); return; }
+    if (saved){
+      document.getElementById('msg').textContent = `You have already revealed your ${sp} companion on this device.`;
+      render(JSON.parse(saved));
+      return;
+    }
     const c = pickOnceFor(sp);
     render(c);
   });
@@ -234,7 +280,10 @@ function resetSpecies(species){
     const sp = document.getElementById('species').value;
     const saved = localStorage.getItem(KEY_PREFIX + sp);
     if (saved) render(JSON.parse(saved));
-    else document.getElementById('result').classList.remove('show');
+    else {
+      document.getElementById('result').classList.remove('show');
+      document.getElementById('msg').textContent = `Ready to reveal your ${sp} companion.`;
+    }
   });
 })();
 </script>
