--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <style>
   :root{
+    /* Premium Vtomo palette */
     --soft-white:#FAF9F6; --warm-beige:#F5EBDD; --peach:#FADCD9; --mist:#C6D8D8;
     --taupe:#A89F91; --ink:#1F2937; --gold:#D4AF37; --ring:#7A6F5A;
+    --shadow:0 18px 50px rgba(122,111,90,.18);
   }
   *{box-sizing:border-box;margin:0}
   body{
@@ -32,10 +34,10 @@
   /* Elegant dropdown */
   .select{
     appearance:none; background:linear-gradient(180deg,#fff,#ffffffcc);
-    border:1px solid rgba(168,159,145,.45); color:#3b3b3b; border-radius:14px;
+    border:1px solid rgba(168,159,145,.45); color:#2f2f2f; border-radius:14px;
     padding:14px 42px 14px 16px; min-width:260px;
     font-family:"Playfair Display",serif; font-size:16px; font-weight:600; text-align:center;
-    cursor:pointer; box-shadow:0 6px 20px rgba(168,159,145,.12), inset 0 1px 0 #ffffff;
+    cursor:pointer; box-shadow:0 8px 24px rgba(168,159,145,.12), inset 0 1px 0 #ffffff;
     transition:.25s; backdrop-filter: blur(6px);
     background-image:
       linear-gradient(180deg,#ffffff,#ffffffcc),
@@ -43,7 +45,7 @@
     background-repeat:no-repeat; background-position:left top, right 12px center; background-size:auto,18px;
   }
   .select:disabled{opacity:.6; cursor:not-allowed}
-  .select:hover{ border-color:rgba(168,159,145,.8); box-shadow:0 10px 30px rgba(168,159,145,.18); }
+  .select:hover{ border-color:rgba(168,159,145,.8); box-shadow:0 12px 32px rgba(168,159,145,.18); }
   .select:focus{ outline:0; border-color:#b7a98f; box-shadow:0 0 0 3px #b7a98f33; }
   .select option{background:#fff;color:#222;}
 
@@ -59,9 +61,9 @@
   /* Stage (hidden until species chosen) */
   .stage{display:grid;place-items:center;margin:28px 0 10px}
   .stage.hidden{display:none;}
-  .circle-wrap{position:relative; width:300px; height:300px}
+  .circle-wrap{position:relative; width:320px; height:320px}
   .circle{
-    position:absolute; inset:10px; border-radius:50%; cursor:pointer;
+    position:absolute; inset:12px; border-radius:50%; cursor:pointer;
     border:2px solid rgba(122,111,90,.55);
     box-shadow:inset 0 0 24px rgba(122,111,90,.15), 0 0 40px rgba(250,220,217,.25);
     animation:spin 24s linear infinite;
@@ -71,6 +73,11 @@
   .rune{position:absolute; inset:0; border-radius:50%; border:1px dashed rgba(122,111,90,.35); animation:spin 18s linear infinite reverse;}
   .tap{position:absolute;inset:auto 0 12px 0;text-align:center;font-weight:700;opacity:.75;color:#6b6254;z-index:2}
   canvas.spark{position:absolute; inset:0; pointer-events:none}
+  .flash{
+    position:absolute; inset:0; border-radius:50%; pointer-events:none; opacity:0;
+    background:radial-gradient(circle,#fff,rgba(255,255,255,.0) 60%);
+    filter:blur(2px); transition:opacity .25s ease;
+  }
   @keyframes spin{from{transform:rotate(0)}to{transform:rotate(360deg)}}
   @keyframes quake {
     0%,100% { transform:translate(0,0) rotate(0deg) }
@@ -94,22 +101,47 @@
   blockquote{background:linear-gradient(180deg,#fff,#fff9);border:1px solid rgba(168,159,145,.35);border-radius:16px;padding:14px 16px;font-style:italic;color:#4a4a4a}
 
   /* Result */
-  .card{display:none;text-align:center;animation:fade .8s ease}
+  .card{display:none;text-align:center}
   .card.show{display:block}
-  @keyframes fade{from{opacity:0;transform:translateY(18px)}to{opacity:1;transform:translateY(0)}}
   #resultCard{
-    margin-top:14px; padding:18px 18px 22px; border-radius:18px; background:linear-gradient(180deg,#ffffff,#fff9);
-    border:1px solid rgba(168,159,145,.35); box-shadow:0 12px 34px rgba(168,159,145,.16);
+    margin-top:14px; padding:22px 22px 24px; border-radius:18px;
+    background:
+      radial-gradient(800px 300px at 50% -80px, rgba(212,175,55,.12), transparent 60%),
+      linear-gradient(180deg,#ffffff,#fff9);
+    border:1px solid rgba(168,159,145,.35); box-shadow:var(--shadow);
+    transform:scale(.96); opacity:0; animation:revealPop .7s ease .05s forwards;
+    position:relative; overflow:visible;
   }
-  .img{width:240px;height:240px;border-radius:18px;margin:0 auto 14px;background:#f2f2f2;display:grid;place-items:center;
-       box-shadow:0 12px 30px rgba(122,111,90,.12);overflow:hidden;border:1px solid rgba(168,159,145,.28)}
+  @keyframes revealPop{from{transform:translateY(12px) scale(.96);opacity:0}to{transform:translateY(0) scale(1);opacity:1}}
+
+  .img{
+    width:248px;height:248px;border-radius:18px;margin:0 auto 16px;background:#f2f2f2;display:grid;place-items:center;
+    box-shadow:0 12px 30px rgba(122,111,90,.12);overflow:hidden;border:1px solid rgba(168,159,145,.28); position:relative;
+  }
   .img img{width:100%;height:100%;object-fit:cover}
+
+  /* Aura orbits around image */
+  .aura{position:absolute; left:50%; top:0; width:0; height:0; pointer-events:none}
+  .orb{
+    position:absolute; width:8px;height:8px;border-radius:50%;
+    background:radial-gradient(circle,#fff, rgba(255,255,255,.0) 70%); box-shadow:0 0 16px rgba(212,175,55,.55);
+    opacity:.9;
+  }
+  .orbit{
+    position:absolute; left:-130px; top:-130px; width:260px; height:260px; border-radius:50%; pointer-events:none;
+    animation:orbit 10s linear infinite;
+  }
+  .orbit.slow{animation-duration:14s; opacity:.75}
+  .orbit.fast{animation-duration:8s; opacity:.85}
+  @keyframes orbit{from{transform:rotate(0)}to{transform:rotate(360deg)}}
+
   .name{font-family:"Playfair Display",serif;font-size:28px;color:#1e1e1e;margin-bottom:6px;position:relative;display:inline-block;padding:0 4px}
   .name:after{content:"";position:absolute;left:0;right:0;bottom:-4px;height:2px;background:linear-gradient(90deg,transparent,var(--gold),transparent);animation:glint 2.4s linear infinite}
   @keyframes glint{0%{transform:translateX(-100%)}100%{transform:translateX(100%)}}
   .role{color:#617b7b;margin-bottom:8px}
-  .field{opacity:.95;max-width:620px;margin:6px auto}
+  .field{opacity:.95;max-width:640px;margin:6px auto}
   .label{font-weight:700;color:#6b6254}
+
   .toolbar{display:flex;gap:10px;justify-content:center;margin-top:12px}
   footer{opacity:.75;text-align:center;margin:48px 0 12px;font-size:14px;color:#6b6254}
 </style>
@@ -126,7 +158,7 @@
         <ol class="ol">
           <li>Choose your species below.</li>
           <li>The ritual circle will appear.</li>
-          <li>Tap it once — it will tremble for ~5 seconds.</li>
+          <li>Tap it once — it will tremble for ~5 seconds with growing light.</li>
           <li>Then your companion will be revealed. Save it if you wish.</li>
         </ol>
       </div>
@@ -144,13 +176,18 @@
       <div class="circle-wrap">
         <div class="rune"></div>
         <canvas class="spark" id="spark"></canvas>
+        <div class="flash" id="flash"></div>
         <div class="circle" id="circle"><div class="tap">Tap to Reveal</div></div>
       </div>
     </div>
 
     <div id="result" class="card">
       <div id="resultCard">
-        <div class="img" id="imgBox">✨</div>
+        <div class="img" id="imgBox">
+          <div class="aura" id="aura">
+            <!-- orbits will be injected here -->
+          </div>
+        </div>
         <div class="name" id="name">—</div>
         <div class="role" id="role">—</div>
         <div class="field" id="personality">—</div>
@@ -209,7 +246,7 @@ async function fetchSheet(){
   const H = {}; header.forEach((h,i)=> H[(h||'').toLowerCase().trim()] = i);
 
   const need = ['species','name','role','image_url'];
-  for (const k of need){ if (!(k in H)) throw new Error('Missing column: '+k); }
+  for (const k of need){ if (!(k in H)) throw new Error('No column: '+k); }
 
   const idxPersonality = ('personality' in H) ? H['personality'] : H['whisper'];
   const idxWhy = H['why_he_chose_you'] ?? H['why'] ?? H['why_chose_you'];
@@ -255,7 +292,7 @@ function resetSpecies(species){
   location.reload();
 }
 
-/** Spark burst */
+/** Spark burst: light burst on tap start */
 function burstSpark(){
   const canvas = document.getElementById('spark');
   const circleWrap = canvas.parentElement;
@@ -288,6 +325,43 @@ function burstSpark(){
   })();
 }
 
+/** Super burst + flash: elegant “explosion” right before reveal */
+function superBurst(){
+  const canvas = document.getElementById('spark');
+  const flash = document.getElementById('flash');
+  const d = canvas.parentElement.clientWidth;
+  canvas.width = d; canvas.height = d;
+  const ctx = canvas.getContext('2d');
+
+  const particles = [];
+  const N = 180;
+  for(let i=0;i<N;i++){
+    const a = Math.random()*Math.PI*2;
+    const sp = 2.2 + Math.random()*3.4;
+    particles.push({
+      x:d/2, y:d/2, vx:Math.cos(a)*sp, vy:Math.sin(a)*sp,
+      life: 46+Math.random()*30, size:1.2+Math.random()*2.6, hue: 42+Math.random()*24
+    });
+  }
+
+  flash.style.opacity = 0.85;
+  setTimeout(()=> flash.style.opacity = 0, 220);
+
+  let frame=0;
+  (function step(){
+    frame++;
+    ctx.clearRect(0,0,d,d);
+    particles.forEach(p=>{
+      p.x+=p.vx; p.y+=p.vy; p.life--;
+      ctx.beginPath();
+      ctx.fillStyle=`hsla(${p.hue},70%,62%,${Math.max(p.life/55,0)})`;
+      ctx.arc(p.x,p.y,p.size,0,Math.PI*2);
+      ctx.fill();
+    });
+    if (frame<90) requestAnimationFrame(step); else ctx.clearRect(0,0,d,d);
+  })();
+}
+
 /** 5) Pick-once logic */
 function pickOnceFor(species){
   const key = KEY_PREFIX + species;
@@ -301,15 +375,48 @@ function pickOnceFor(species){
   return chosen;
 }
 
-/** 6) Render (without auto-scroll until we call it) */
+/** Build aura orbits around the image */
+function buildAura(){
+  const aura = document.getElementById('aura');
+  aura.innerHTML = '';
+  const mkOrbit = (cls, r, count) => {
+    const orbit = document.createElement('div');
+    orbit.className = 'orbit '+cls;
+    orbit.style.left = (-r)+'px';
+    orbit.style.top  = (-r)+'px';
+    orbit.style.width = (r*2)+'px';
+    orbit.style.height= (r*2)+'px';
+    for(let i=0;i<count;i++){
+      const o = document.createElement('span');
+      o.className='orb';
+      const t = (i/count)*360;
+      o.style.left = (r + (r-6)*Math.cos(t*Math.PI/180))+'px';
+      o.style.top  = (r + (r-6)*Math.sin(t*Math.PI/180))+'px';
+      orbit.appendChild(o);
+    }
+    aura.appendChild(orbit);
+  };
+  mkOrbit('slow', 132, 6);
+  mkOrbit('fast', 105, 4);
+}
+
+/** 6) Render result */
 function render(c){
   const imgBox = document.getElementById('imgBox');
-  imgBox.innerHTML = c.image_url ? `<img src="${c.image_url}" alt="${c.name}" crossOrigin="anonymous">` : "✨";
+  imgBox.innerHTML = `<div class="aura" id="aura"></div>` + (c.image_url ? `<img src="${c.image_url}" alt="${c.name}" crossOrigin="anonymous">` : "✨");
+  buildAura();
+
   document.getElementById('name').textContent = c.name || "—";
   document.getElementById('role').textContent = c.role || "—";
   document.getElementById('personality').innerHTML = c.personality ? `<span class="label">Personality:</span> ${c.personality}` : "—";
   document.getElementById('why').innerHTML         = c.why ? `<span class="label">Why He Chose You:</span> ${c.why}` : "—";
-  document.getElementById('result').classList.add('show');
+
+  const result = document.getElementById('result');
+  result.classList.add('show');
+  const card = document.getElementById('resultCard');
+  card.style.animation = 'none'; card.getBoundingClientRect(); // restart animation
+  card.style.animation = '';
+
   document.getElementById('saveImg').disabled = false;
   document.getElementById('msg').textContent = "";
 }
@@ -347,7 +454,7 @@ async function saveAsImage(){
     document.getElementById('prepMsg').textContent = `Ready for the ${sp} ritual. Tap the circle once.`;
   });
 
-  // Tap circle -> 5s shake + spark -> reveal
+  // Tap circle -> 5s shake + spark -> super burst + flash -> reveal
   document.getElementById('circle').addEventListener('click', async ()=>{
     if (busy) return;
     const sp = document.getElementById('species').value;
@@ -355,20 +462,23 @@ async function saveAsImage(){
 
     busy = true;
     const circle = document.getElementById('circle');
-    // start effects
-    circle.classList.add('shaking'); burstSpark(); pulse();
+    burstSpark(); pulse();
+    circle.classList.add('shaking');
 
-    // wait 5s
+    // wait ~5s with shake
     await new Promise(r => setTimeout(r, 5000));
     circle.classList.remove('shaking');
 
-    // determine result (saved or new), but only render now (after delay)
+    // elegant explosion right before reveal
+    superBurst();
+
+    // determine result (saved or new), render after the burst starts
     const saved = localStorage.getItem(KEY_PREFIX + sp);
     const c = saved ? JSON.parse(saved) : pickOnceFor(sp);
     render(c);
-    // now scroll into view smoothly
-    document.getElementById('result').scrollIntoView({behavior:'smooth',block:'center'});
 
+    // scroll into view smoothly
+    document.getElementById('result').scrollIntoView({behavior:'smooth',block:'center'});
     busy = false;
   });
 
